--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Alura Books</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="reset.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,400;0,500;0,700;1,200&display=swap" rel="stylesheet">
+  <link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css">
+  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header class="cabecalho"> <!--Começo do Header-->
@@ -45,10 +48,44 @@
     </div> <!--Final do Contianer 2-->
   </header> <!--Final do Header-->
 
-  <section class="banner">
+  <section class="banner"> <!--Inicio do Banner de Pesquisa-->
     <h2 class="banner__titulo">Já sabe por onde começar?</h2>
     <p class="banner__texto">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
     <input type="search" class="banner__pesquisa" placeholder="Qual será sua próxima leitura?">
-  </section>
+  </section> <!--Final do Banner de Pesquisa-->
+
+  <section class="carrosel"> <!--Inico do Carrosel-->
+    <h2 class="carrosel__titulo">Novos Lançamentos</h2>
+    <!-- Slider main container -->
+    <div class="swiper">
+      <!-- Additional required wrapper -->
+      <div class="swiper-wrapper">
+
+      <!-- Slides -->
+      <div class="swiper-slide">
+        <img src="img/ApacheKafka.png" alt="Livro sobre apache kafka da alura books">
+      </div>
+      <div class="swiper-slide"><img src="img/Javascript.png" alt="Livro sobre javascript da alura books"></div>
+      <div class="swiper-slide"><img src="img/Liderança.png" alt="Livro sobre liderança da alura books"></div>
+      <div class="swiper-slide"><img src="img/Guia Front-end.png" alt="Livro sobre guia front-end da alura books"></div>
+      <div class="swiper-slide"><img src="img/Portugol.png" alt="Livro sobre portugol da alura books"></div>
+
+      <!-- If we need navigation buttons -->
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-button-next"></div>
+
+  </section> <!--Final do Carrosel-->
+
+  <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+  <script>
+    const swiper = new Swiper('.swiper', {
+      spaceBetween: 10,
+      slidesPerView: 3,
+      pagination: {
+      el: '.swiper-pagination',
+      type: 'bullets',
+      },
+    });
+  </script>
 </body>
 </html>
