--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Josefin+Sans:wght@400;700&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -18,10 +19,13 @@
   <header class="cabecalho"> <!--Começo do Header-->
     <div class="container"> <!--Começo do Container 1-->
       <input type="checkbox" id="menu" class="container__botao">
+
       <label for="menu">
         <span class="cabecalho__menu-hamburguer container__imagem"></span>
       </label>
+
       <ul class="lista-menu">
+
         <li class="lista-menu__titulo">Categorias</li>
         <li class="lista-menu__item"> 
           <a href="#" class="lista-menu__link">Programação</a>
@@ -39,10 +43,42 @@
           <a href="#" class="lista-menu__link">Design & UX</a>
         </li>
       </ul>
+
       <img src="img/Logo.svg" alt="Logo da Alura Books" class="container__imagem">
+      <h1 class="container__titulo"><b class="container__titulo-negrito">Alura</b>Books</h1>
     </div> <!--Final do Contianer 1-->
+
+    <ul class="opcoes">
+      <input type="checkbox" id="opcoes__menu" class="opcoes__botao">
+      <label for="opcoes__menu">
+      <li class="opcoes__item">Categorias</li>
+      </label>
+
+      <ul class="lista-menu">
+        <li class="lista-menu__item"> 
+          <a href="#" class="lista-menu__link">Programação</a>
+        </li>
+        <li class="lista-menu__item"> 
+          <a href="#" class="lista-menu__link">Front-end</a>
+        </li>
+        <li class="lista-menu__item"> 
+          <a href="#" class="lista-menu__link">Infraestrutura</a>
+        </li>
+        <li class="lista-menu__item"> 
+          <a href="#" class="lista-menu__link">Business</a>
+        </li>
+        <li class="lista-menu__item"> 
+          <a href="#" class="lista-menu__link">Design & UX</a>
+        </li>
+      </ul>
+
+      <li class="opcoes__item"><a href="#" class="opcoes__link">Favoritos</a></li>
+      <li class="opcoes__item"><a href="#" class="opcoes__link">Minha Estante</a></li>
+    </ul>
+
+
     <div class="container"> <!--Começo do Contianer 2-->
-      <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos" class="container__imagem"></a>
+      <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos" class="container__imagem container__imagem-transpatente"></a>
       <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras" class="container__imagem"></a>
       <a href="#"><img src="img/Usuário.svg" alt="Meus perfil" class="container__imagem"></a>
     </div> <!--Final do Contianer 2-->
@@ -55,9 +91,11 @@
   </section> <!--Final do Banner de Pesquisa-->
 
   <section class="carrosel"> <!--Inico do Carrosel-->
-    <h2 class="carrosel__titulo">Novos Lançamentos</h2>
+    <h2 class="carrosel__titulo">Últimos Lançamentos</h2>
     <!-- Slider main container -->
     <div class="swiper">
+
+      <div class="swiper-pagination"></div>
       <!-- Additional required wrapper -->
       <div class="swiper-wrapper">
 
@@ -73,8 +111,212 @@
       <!-- If we need navigation buttons -->
       <div class="swiper-button-prev"></div>
       <div class="swiper-button-next"></div>
-
   </section> <!--Final do Carrosel-->
+
+  <section> <!--Inicio do Card-->
+    <div class="card">
+      <!--1° linha-->
+      <div class="card__descricao">
+        <!--1° Coluna-->
+        <div class="descricao">
+          <h3 class="descricao__titulo">Talvez você também se interesse por...</h3>
+          <h2 class="descricao__titulo-livro">Angular 11 e Firebase</h2>
+          <p class="descricao__texto">Construindo uma aplicação integrada com a plataforma do Google</p>
+        </div>
+        <!--2° Coluna-->
+        <img src="img/Angular.png" alt="livro angular" class="imagem__descricao">
+      </div>
+
+      <!--2° linha-->
+      <div class="card__botoes">
+        <!--1° Coluna-->
+        <ul class="botoes">
+          <li class="botoes__item"><img src="img/Favoritos.svg" alt="Favoritos Livros"></li>
+          <li class="botoes__item"><img src="img/Compras.svg" alt="Carrinho de compras"></li>
+        </ul>
+        <!--2° Coluna-->
+        <a href="#" class="botoes__ancora">Saiba mais</a>
+      </div>
+    </div>
+  </section> <!--Final do Card-->
+
+  <section class="carrosel"> <!--Inico do Carrosel 2-->
+    <h2 class="carrosel__titulo">Mais Vendidos</h2>
+    <!-- Slider main container -->
+    <div class="swiper">
+
+      <div class="swiper-pagination"></div>
+      <!-- Additional required wrapper -->
+      <div class="swiper-wrapper">
+
+      <!-- Slides -->
+      <div class="swiper-slide">
+        <img src="img/ApacheKafka.png" alt="Livro sobre apache kafka da alura books">
+      </div>
+      <div class="swiper-slide"><img src="img/Javascript.png" alt="Livro sobre javascript da alura books"></div>
+      <div class="swiper-slide"><img src="img/Liderança.png" alt="Livro sobre liderança da alura books"></div>
+      <div class="swiper-slide"><img src="img/Guia Front-end.png" alt="Livro sobre guia front-end da alura books"></div>
+      <div class="swiper-slide"><img src="img/Portugol.png" alt="Livro sobre portugol da alura books"></div>
+
+      <!-- If we need navigation buttons -->
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-button-next"></div>
+  </section> <!--Final do Carrosel 2-->
+
+  <section> <!--Inicio do Card 2-->
+    <div class="card">
+      <!--1° linha-->
+      <div class="card__descricao">
+        <!--1° Coluna-->
+        <div class="descricao">
+          <img src="img/Estrelinhas.png" alt="Avaliação 5 estrelas">
+          <h3 class="descricao__titulo">Autora do mês</h3>
+          <h2 class="descricao__titulo-livro">Juliana Agarikov</h2>
+          <p class="descricao__texto">Analise de sistemas e escritora, Juliana é especialista em Front-End.</p>
+        </div>
+        <!--2° Coluna-->
+        <img src="img/Perfil-escritora 1-1.png" alt="Escritora" class="imagem__descricao">
+      </div>
+
+      <!--2° linha-->
+      <div class="card__botoes">
+        <!--1° Coluna-->
+        <ul class="botoes">
+          <li class="botoes__item"><img src="img/Favoritos.svg" alt="Favoritos Livros"></li>
+          <li class="botoes__item"><img src="img/Compras.svg" alt="Carrinho de compras"></li>
+        </ul>
+        <!--2° Coluna-->
+        <a href="#" class="botoes__ancora">Saiba mais</a>
+      </div>
+    </div>
+  </section> <!--Final do Card-->
+
+  <section class="topicos"> <!--Inicio dos Topicos-->
+
+    <h2 class="topicos__titulo">TÓPICOS VISITADOS RECENTIMENTE</h2>
+
+    <ul class="topicos__lista">
+
+      <li class="topicos__item">
+        <a href="#" class="topicos__link">Android</a>
+      </li>
+
+      <li class="topicos__item">
+        <a href="#" class="topicos__link">HTML & CSS</a>
+      </li>
+
+      <li class="topicos__item">
+        <a href="#" class="topicos__link">Markiting Digital</a>
+      </li>
+
+      <li class="topicos__item">
+        <a href="#" class="topicos__link">Startups</a>
+      </li>
+
+      <li class="topicos__item">
+        <a href="#" class="topicos__link">Agile</a>
+      </li>
+
+      <li class="topicos__item">
+        <a href="#" class="topicos__link">Java</a>
+      </li>
+
+      <li class="topicos__item">
+        <a href="#" class="topicos__link">OO</a>
+      </li>
+
+      <li class="topicos__item">
+        <a href="#" class="topicos__link">Python</a>
+      </li>
+
+    </ul>
+
+  </section> <!--Final dos Topicos-->
+
+  <section class="contato"> <!--Inicio do Contato-->
+
+    <div class="contato__descricao">
+      <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
+      <p class="contato__texto">Atualizações de e-books, novos livros, promoções e outros.</p>
+    </div>
+
+      <input type="email" placeholder="cadastre seu e-mail" class="contato__email">
+
+  </section> <!--Inicio do Contato-->
+
+  <hr />
+
+  <footer class="rodape"> <!--Inicio do footer-->
+
+    <h2 class="rodape__titulo">Grupo Alura</h2>
+
+    <ul class="lista-rodape"> <!--Inicio da Primeira Lista do footer-->
+
+      <li class="lista-rodape__titulo">Educação</li>
+      <li class="lista-rodape__item"><img src="img/CasaDoCodigo.png" alt="Logo da Casa Do Código">
+      <a href="#" class="lista-rodape__link">Casa Do Código</a>
+    </li>
+    <li class="lista-rodape__item"><img src="img/Caelum.png" alt="Logo da Caelum">
+      <a href="#" class="lista-rodape__link">Caelum</a>
+    </li>
+
+    </ul> <!--Final da Primeira Lista do footer-->
+
+    <ul class="lista-rodape"> <!--Inicio da Segunda Lista do footer-->
+
+      <li class="lista-rodape__titulo">Educação online</li>
+      <li class="lista-rodape__item"><img src="img/Alura.png" alt="Logo da Alura">
+      <a href="#" class="lista-rodape__link">Alura</a>
+    </li>
+    <li class="lista-rodape__item"><img src="img/AluraEmpresas.png" alt="Logo da Alura Empresas">
+      <a href="#" class="lista-rodape__link">Alura Para Empresas</a>
+    </li>
+    <li class="lista-rodape__item"><img src="img/AluraLatam.png" alt="Logo da Alura Latam">
+      <a href="#" class="lista-rodape__link">Alura LATAM</a>
+    </li>
+    <li class="lista-rodape__item"><img src="img/AluraStart.png" alt="Logo da Alura Start">
+      <a href="#" class="lista-rodape__link">Alura Start</a>
+    </li>
+    <li class="lista-rodape__item"><img src="img/MusicDot.png" alt="Logo da MusicDot">
+      <a href="#" class="lista-rodape__link">MusicDot</a>
+    </li>
+    <li class="lista-rodape__item"><img src="img/AluraLingua.png" alt="Logo da Alura Lingua">
+      <a href="#" class="lista-rodape__link">Alura Língua</a>
+    </li>
+    <li class="lista-rodape__item"><img src="img/PM3.png" alt="Logo da PM3">
+      <a href="#" class="lista-rodape__link">PM3</a>
+    </li>
+
+    </ul> <!--Final da Segunda Lista do footer-->
+
+    <ul class="lista-rodape"> <!--Inicio da Terceira Lista do footer-->
+
+      <li class="lista-rodape__titulo">Comunidade</li>
+      <li class="lista-rodape__item"><img src="img/HipstersTech.png" alt="Logo da Hispsters ponto Tech">
+        <a href="#" class="lista-rodape__link">Hipsters ponto Tech</a>
+      </li>
+      <li class="lista-rodape__item"><img src="img/Scuba.png" alt="Logo da Scuba Dev">
+        <a href="#" class="lista-rodape__link">Scuba Dev</a>
+      </li>
+      <li class="lista-rodape__item"><img src="img/Layers.png" alt="Logo da Layers ponto Tech">
+        <a href="#" class="lista-rodape__link">Layers ponto Tech</a>
+      </li>
+      <li class="lista-rodape__item"><img src="img/LikeABoss.png" alt="Logo da Like A Boss">
+        <a href="#" class="lista-rodape__link">Like a Boss</a>
+      </li>
+      <li class="lista-rodape__item"><img src="img/CarreiraSemFronteira.png" alt="Logo da Carreira sem Fronteira">
+        <a href="#" class="lista-rodape__link">Carreira sem Fronteira</a>
+      </li>
+      <li class="lista-rodape__item"><img src="img/HipstersJobs.png" alt="Logo da Hipsters ponto Jobs">
+        <a href="#" class="lista-rodape__link">Hipsters ponto Jobs</a>
+      </li>
+      <li class="lista-rodape__item"><img src="img/GUJ.png" alt="Logo da GUJ">
+        <a href="#" class="lista-rodape__link">GUJ</a>
+      </li>
+
+    </ul> <!--Final da Terceira Lista do footer-->
+
+  </footer> <!--Final do footer-->
 
   <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   <script>
