--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="container"> <!--Começo do Container 1-->
       <input type="checkbox" id="menu" class="container__botao">
 
-      <label for="menu">
+      <label for="menu" class="container__rotulo">
         <span class="cabecalho__menu-hamburguer container__imagem"></span>
       </label>
 
@@ -50,8 +50,8 @@
 
     <ul class="opcoes">
       <input type="checkbox" id="opcoes__menu" class="opcoes__botao">
-      <label for="opcoes__menu">
-      <li class="opcoes__item">Categorias</li>
+      <label for="opcoes__menu" class="opcoes__rotulo">
+        <li class="opcoes__item">Categorias</li>
       </label>
 
       <ul class="lista-menu">
@@ -78,9 +78,17 @@
 
 
     <div class="container"> <!--Começo do Contianer 2-->
-      <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos" class="container__imagem container__imagem-transpatente"></a>
-      <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras" class="container__imagem"></a>
-      <a href="#"><img src="img/Usuário.svg" alt="Meus perfil" class="container__imagem"></a>
+      <a href="#">
+        <img src="img/Favoritos.svg" alt="Meus favoritos" class="container__imagem container__imagem-transpatente">
+      </a>
+      <a href="#" class="container__link">
+        <img src="img/Compras.svg" alt="Carrinho de compras" class="container__imagem">
+        <p class="container__texto">Minha Sacola</p>
+      </a>
+      <a href="#" class="container__link">
+        <img src="img/Usuário.svg" alt="Meus perfil" class="container__imagem">
+        <p class="container__texto">Meu Perfil</p>
+      </a>
     </div> <!--Final do Contianer 2-->
   </header> <!--Final do Header-->
 
@@ -90,106 +98,137 @@
     <input type="search" class="banner__pesquisa" placeholder="Qual será sua próxima leitura?">
   </section> <!--Final do Banner de Pesquisa-->
 
-  <section class="carrosel"> <!--Inico do Carrosel-->
-    <h2 class="carrosel__titulo">Últimos Lançamentos</h2>
+  <section class="carrossel"> <!--Inicio do Carrosel + Card 1-->
+    <h2 class="carrossel__titulo">Novos lançamentos</h2>
     <!-- Slider main container -->
-    <div class="swiper">
+    <div class="carrossel__container">
 
-      <div class="swiper-pagination"></div>
-      <!-- Additional required wrapper -->
-      <div class="swiper-wrapper">
+        <div class="swiper"> <!--Inicio do Carrosel 1-->
+          <!-- Additional required wrapper -->
+          <!-- If we need pagination -->
+          <div class="swiper-pagination"></div>
 
-      <!-- Slides -->
-      <div class="swiper-slide">
-        <img src="img/ApacheKafka.png" alt="Livro sobre apache kafka da alura books">
-      </div>
-      <div class="swiper-slide"><img src="img/Javascript.png" alt="Livro sobre javascript da alura books"></div>
-      <div class="swiper-slide"><img src="img/Liderança.png" alt="Livro sobre liderança da alura books"></div>
-      <div class="swiper-slide"><img src="img/Guia Front-end.png" alt="Livro sobre guia front-end da alura books"></div>
-      <div class="swiper-slide"><img src="img/Portugol.png" alt="Livro sobre portugol da alura books"></div>
+          <div class="swiper-wrapper">
+            <!-- Slides -->
+            <div class="swiper-slide">
+              <img src="img/ApacheKafka.png" alt="Livro sobre apache kafka e spring boot da alura books">
+            </div>
+            <div class="swiper-slide">
+              <img src="img/Liderança.png" alt="Livro sobre liderança em design da alura books">
+            </div>
+            <div class="swiper-slide">
+              <img src="img/Javascript.png" alt="Livro sobre javascript assertivo da alurabooks">
+            </div>
+            <div class="swiper-slide">
+              <img src="img/Guia Front-end.png" alt="Livro Guia front end">
+            </div>
+            <div class="swiper-slide">
+              <img src="img/Portugol.png" alt="Livro sobre portugol">
+            </div>
+          </div>
 
-      <!-- If we need navigation buttons -->
-      <div class="swiper-button-prev"></div>
-      <div class="swiper-button-next"></div>
-  </section> <!--Final do Carrosel-->
+          <!-- If we need navigation buttons -->
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-button-next"></div>
+        </div> <!--Final do Carrosel 1-->
 
-  <section> <!--Inicio do Card-->
-    <div class="card">
-      <!--1° linha-->
-      <div class="card__descricao">
-        <!--1° Coluna-->
-        <div class="descricao">
-          <h3 class="descricao__titulo">Talvez você também se interesse por...</h3>
-          <h2 class="descricao__titulo-livro">Angular 11 e Firebase</h2>
-          <p class="descricao__texto">Construindo uma aplicação integrada com a plataforma do Google</p>
+        <div class="card"> <!--Inicio do Card 1-->
+          <!-- 1º linha -->
+          <div class="card__descricao">
+            <!-- 1º coluna -->
+            <div class="descricao">
+              <h3 class="descricao__titulo">Talvez você também se interesse por...</h3>
+              <h2 class="descricao__titulo-livro">Angular 11 e Firebase</h2>
+              <p class="descricao__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
+            </div>
+              <!-- 2º coluna -->
+              <img src="img/Angular.png" class="descrição__imagem">
+          </div>
+
+          <!-- 2º linha -->
+          <div class="card__botoes">
+            <!-- 1º coluna -->
+            <ul class="botoes">
+              <li class="botoes__item">
+                <img src="img/Favoritos.svg" alt="Favoritar livro">
+              </li>
+              <li class="botoes__item">
+                <img src="img/Compras.svg" alt="Adicionar no carrinho de compras">
+              </li>
+            </ul>
+            <!-- 2º coluna -->
+            <a href="#" class="botoes__ancora">Saiba mais</a>
+          </div>
+        </div> <!--Final do Carrosel 1-->
+    </div>
+  </section> <!--Final do Carrosel + Card 1-->
+
+  <section class="carrossel"> <!--Inicio do Carrosel + Card 2-->
+    <h2 class="carrossel__titulo">Mais vendidos</h2>
+    <!-- Slider main container -->
+    <div class="carrossel__container">
+
+      <div class="swiper"> <!--Inicio do Carrossel 2-->
+
+        <!-- Additional required wrapper -->
+        <!-- If we need pagination -->
+        <div class="swiper-pagination"></div>
+
+        <div class="swiper-wrapper">
+          <!-- Slides -->
+          <div class="swiper-slide">
+            <img src="img/ApacheKafka.png" alt="Livro sobre apache kafka e spring boot da alura books">
+          </div>
+          <div class="swiper-slide">
+            <img src="img/Liderança.png" alt="Livro sobre liderança em design da alura books">
+          </div>
+          <div class="swiper-slide">
+            <img src="img/Javascript.png" alt="Livro sobre javascript assertivo da alurabooks">
+          </div>
+          <div class="swiper-slide">
+            <img src="img/Guia Front-end.png" alt="Livro Guia front end">
+          </div>
+          <div class="swiper-slide">
+            <img src="img/Portugol.png" alt="Livro sobre portugol">
+          </div>
         </div>
-        <!--2° Coluna-->
-        <img src="img/Angular.png" alt="livro angular" class="imagem__descricao">
-      </div>
 
-      <!--2° linha-->
-      <div class="card__botoes">
-        <!--1° Coluna-->
-        <ul class="botoes">
-          <li class="botoes__item"><img src="img/Favoritos.svg" alt="Favoritos Livros"></li>
-          <li class="botoes__item"><img src="img/Compras.svg" alt="Carrinho de compras"></li>
-        </ul>
-        <!--2° Coluna-->
-        <a href="#" class="botoes__ancora">Saiba mais</a>
+          <!-- If we need navigation buttons -->
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
+      </div> <!--Final do Carrossel 2-->
+
+      <div class="card"> <!--Inicio do Card 2-->
+        <!-- 1º linha -->
+        <div class="card__descricao">
+          <!-- 1º coluna -->
+          <div class="descricao">
+            <img src="img/Estrelinhas.png" alt="Avaliação 5 estrelas">
+            <h3 class="descricao__titulo">Autora do Mês</h3>
+            <h2 class="descricao__titulo-livro">Juliana Agarikov</h2>
+            <p class="descricao__texto">Analista de sistemas e escritora, Juliana é especialista em Front-End.</p>
+          </div>
+          <!-- 2º coluna -->
+          <img src="img/Perfil-escritora 1-1.png" class="descricao__imagem">
+        </div>
+
+        <!-- 2º linha -->
+        <div class="card__botoes">
+          <!-- 1º coluna -->
+          <ul class="botoes">
+            <li class="botoes__item">
+              <img src="img/Favoritos.svg" alt="Favoritar livro">
+            </li>
+            <li class="botoes__item">
+              <img src="img/Compras.svg" alt="Adicionar no carrinho de compras">
+            </li>
+          </ul>
+          <!-- 2º coluna -->
+          <a href="#" class="botoes__ancora">Saiba mais</a>
+        </div> <!--Final do Card 2-->
       </div>
     </div>
-  </section> <!--Final do Card-->
-
-  <section class="carrosel"> <!--Inico do Carrosel 2-->
-    <h2 class="carrosel__titulo">Mais Vendidos</h2>
-    <!-- Slider main container -->
-    <div class="swiper">
-
-      <div class="swiper-pagination"></div>
-      <!-- Additional required wrapper -->
-      <div class="swiper-wrapper">
-
-      <!-- Slides -->
-      <div class="swiper-slide">
-        <img src="img/ApacheKafka.png" alt="Livro sobre apache kafka da alura books">
-      </div>
-      <div class="swiper-slide"><img src="img/Javascript.png" alt="Livro sobre javascript da alura books"></div>
-      <div class="swiper-slide"><img src="img/Liderança.png" alt="Livro sobre liderança da alura books"></div>
-      <div class="swiper-slide"><img src="img/Guia Front-end.png" alt="Livro sobre guia front-end da alura books"></div>
-      <div class="swiper-slide"><img src="img/Portugol.png" alt="Livro sobre portugol da alura books"></div>
-
-      <!-- If we need navigation buttons -->
-      <div class="swiper-button-prev"></div>
-      <div class="swiper-button-next"></div>
-  </section> <!--Final do Carrosel 2-->
-
-  <section> <!--Inicio do Card 2-->
-    <div class="card">
-      <!--1° linha-->
-      <div class="card__descricao">
-        <!--1° Coluna-->
-        <div class="descricao">
-          <img src="img/Estrelinhas.png" alt="Avaliação 5 estrelas">
-          <h3 class="descricao__titulo">Autora do mês</h3>
-          <h2 class="descricao__titulo-livro">Juliana Agarikov</h2>
-          <p class="descricao__texto">Analise de sistemas e escritora, Juliana é especialista em Front-End.</p>
-        </div>
-        <!--2° Coluna-->
-        <img src="img/Perfil-escritora 1-1.png" alt="Escritora" class="imagem__descricao">
-      </div>
-
-      <!--2° linha-->
-      <div class="card__botoes">
-        <!--1° Coluna-->
-        <ul class="botoes">
-          <li class="botoes__item"><img src="img/Favoritos.svg" alt="Favoritos Livros"></li>
-          <li class="botoes__item"><img src="img/Compras.svg" alt="Carrinho de compras"></li>
-        </ul>
-        <!--2° Coluna-->
-        <a href="#" class="botoes__ancora">Saiba mais</a>
-      </div>
-    </div>
-  </section> <!--Final do Card-->
+  </section> <!--Final do Carrosel + Card 2-->
 
   <section class="topicos"> <!--Inicio dos Topicos-->
 
